--- a/Frontend/indian-army-dashboard/src/index.css
+++ b/Frontend/indian-army-dashboard/src/index.css
@@ -61,7 +61,7 @@ button:focus-visible {
     background-color: #ffffff;
   }
   a:hover {
-    color: #747bff;
+    color: #7176d4;
   }
   button {
     background-color: #f9f9f9;
